compressed the image sizes

--- a/Calculator (dark mode).css
+++ b/Calculator (dark mode).css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: url("Argon.jpg");
+    background-image: url("Argon.png");
     background-repeat: repeat;
     background-size: cover;
 }
