--- a/Calculator.css
+++ b/Calculator.css
@@ -4,18 +4,16 @@
 }
 
 @font-face {
-    font-family: 'Radioland';
-    src: url('Radioland.eot');
-    src: url('Radioland.eot?#iefix') format('embedded-opentype'),
-        url('Radioland.woff2') format('woff2'),
-        url('Radioland.woff') format('woff');
-    font-weight: normal;
+    font-family: 'SF Digital Readout';
+    src: url('Font/SFDigitalReadout-Light.woff2') format('woff2'),
+        url('Font/SFDigitalReadout-Light.woff') format('woff');
+    font-weight: 300;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 body{
-    background-image: url("Argon.png");
+    background-image: url("/Background-Images/Argon.png");
     background-repeat: repeat;
     background-size: cover;
 }
@@ -58,16 +56,6 @@ button:hover{
     background-color: #bb22be;
 }
 
-.drop_down_menu{
-    /* position: relative;
-    top: 100px;
-    left: 110px; */
-    background-color: white;
-    height: 50%;
-    width: 30%;
-    color: black;
-}
-
 .header{
     display: flex;
     flex-direction: row;
@@ -82,7 +70,7 @@ button:hover{
     height: 80px;
     background-color: rgb(63, 63, 196);
     font-size: 50px;
-    /* font-family: 'Radioland'; */
+    font-family: 'SF Digital Readout';
     text-align: right;
     display: flex;
     align-items: center;
